fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Grham Diesel</h3>
+              <h3>Graham Diesel</h3>
               <p>
                 Somerset West <br />
                 Western Cape<br />
