--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="#">About</a></li>
             <li class="dropdown">
-              <a><span>Register</span> <i class="bi bi-chevron-down"></i></a>
+              <a href="register.html"><span>Register</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="new.html">New Students</a></li>
                 <li><a href="return.html">Returning Students</a></li>
@@ -73,7 +73,7 @@
         </nav>
         <!-- .navbar -->
 
-        <a href="new.html" class="get-started-btn">Get Started</a>
+        <a href="register.html" class="get-started-btn">Get Started</a>
       </div>
     </header>
     <!-- End Header -->
