--- a/new.html
+++ b/new.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a><span>Register</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="register.html"><span>Register</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
             
               <li><a class="active" href="#">New Students</a></li>
@@ -68,7 +68,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="new.html" class="get-started-btn">Get Started</a>
+      <a href="register.html" class="get-started-btn">Get Started</a>
 
     </div>
   </header><!-- End Header -->
