--- a/register.html
+++ b/register.html
@@ -84,7 +84,7 @@
         <div class="container">
           <h2>Register</h2>
           <p>
-            Est dolorum ut non facere possimus quibusdam eligendi voluptatem.
+            Este dolorum ut non facere possimus quibusdam eligendi voluptatem.
             Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis
             ipsam aperiam consequatur laboriosam nemo harum praesentium.
           </p>
