fixed contact page look and feel

--- a/styles.html
+++ b/styles.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Mirrored from demo.templatesjungle.com/christina/styles.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:17 GMT -->
+<!-- Mirrored from demo.templatesjungle.com/Uplift Music/styles.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:17 GMT -->
 <head>
-	<title>Christina - Free HTML CSS Photographer Portfolio Template</title>
+	<title>Uplift Music - Free HTML CSS Photographer Portfolio Template</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,13 +41,13 @@
 <div class="nav nav-overlay">
 	<div class="nav__content">
 		<ul class="nav__list">
-			<li class="nav__list-item active-nav"><a href="index-2.html" class="hover-target">Home</a></li>
+			<li class="nav__list-item active-nav"><a href="index.html" class="hover-target">Home</a></li>
 			<li class="nav__list-item"><a href="portfolio.html" class="hover-target">Portfolio <span>(pro)</span> </a></li>
 			<li class="nav__list-item"><a href="styles.html" class="hover-target">Styles <span>(pro)</span> </a></li>
 			<li class="nav__list-item"><a href="blog.html" class="hover-target">Blog <span>(pro)</span> </a></li>
 			<li class="nav__list-item"><a href="single-post.html" class="hover-target">Single Post <span>(pro)</span> </a></li>
 			<li class="nav__list-item"><a href="contact.html" class="hover-target">Contact <span>(pro)</span> </a></li>
-			<li class="nav__list-item"><a href="https://templatesjungle.gumroad.com/l/christina-creative-portfolio-html-template" class="hover-target" target="_blank" style="color: #fff;"> GET PRO</a></li>
+			<li class="nav__list-item"><a href="https://templatesjungle.gumroad.com/l/Uplift Music-creative-portfolio-html-template" class="hover-target" target="_blank" style="color: #fff;"> GET PRO</a></li>
 		</ul>
 	</div>
 </div>
@@ -56,7 +56,7 @@
 		<div id="header-wrap">
 			<nav id="navbar">
 				<div class="main-logo">
-					<a href="index-2.html">Christina.</a>
+					<a href="index.html">Uplift Music.</a>
 				</div>
 				<div class="action-menu">
 				  <input id="menu-toggle" type="checkbox" />
@@ -78,7 +78,7 @@
 				<div class="col-md-12">			
 					<h1 class="page-title">HTML Elements</h1>
 					<div class="breadcrumbs">
-						<span class="item"><a href="index-2.html">Home /</a></span>
+						<span class="item"><a href="index.html">Home /</a></span>
 						<span class="item">Styles</span>
 					</div>
 				</div>
@@ -519,7 +519,7 @@
 							<li>16122 CSW, Victoria 8007 Australia</li>
 							<li>+1 650-333-0000 / +1 561-334-0580</li>
 							<li><a href="mailto:info@yourcompany.com" class="colored">info@yourcompany.com</a></li>
-							<li>© 2021 Christina. All rights reserved.</li>
+							<li>© 2021 Uplift Music. All rights reserved.</li>
 							<li>Designed by : <a href="https://www.templatesjungle.com/">TemplatesJungle</a></li>
 						</ul>
 					</div><!--detail-->
@@ -530,7 +530,7 @@
 					<div class="container">
 						<div class="row">
 							<h3>Quick Contact</h2>
-							<form action="https://demo.templatesjungle.com/christina/contact.php" class="contact-form d-flex flex-wrap mt-4">
+							<form action="https://demo.templatesjungle.com/Uplift Music/contact.php" class="contact-form d-flex flex-wrap mt-4">
 								<input type="text" name="name" placeholder="Name" class="name mb-3" required>
 								<input type="text" name="E-mail/Phone Number" placeholder="E-mail/Phone Number" class="mb-3" required>
 								<textarea placeholder="Message" style="height: 150px;" required></textarea>
@@ -557,5 +557,5 @@
 
 </body>
 
-<!-- Mirrored from demo.templatesjungle.com/christina/styles.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:17 GMT -->
+<!-- Mirrored from demo.templatesjungle.com/Uplift Music/styles.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:17 GMT -->
 </html>
