--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <!-- Mirrored from demo.templatesjungle.com/christina/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:05 GMT -->
+  <!-- Mirrored from demo.templatesjungle.com/Uplift Music/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:05 GMT -->
   <head>
     <title>Uplift Music</title>
     <meta charset="utf-8" />
@@ -416,5 +416,5 @@
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 
-  <!-- Mirrored from demo.templatesjungle.com/christina/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:13 GMT -->
+  <!-- Mirrored from demo.templatesjungle.com/Uplift Music/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:13 GMT -->
 </html>
