--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
   <!-- Mirrored from demo.templatesjungle.com/Uplift Music/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:05 GMT -->
   <head>
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    
     <title>Uplift Music</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
