made the site responsive

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <!-- Mirrored from demo.templatesjungle.com/Uplift Music/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:05 GMT -->
+  <!-- Mirrored from demo.templatesjungle.com/Uplift Music/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:18 GMT -->
   <head>
     <meta
       http-equiv="Cache-Control"
@@ -13,7 +13,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="format-detection" content="telephone=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="description"
@@ -46,9 +45,9 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/vendor.css" />
     <link rel="stylesheet" type="text/css" href="fonts/icomoon/icomoon.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
-  <body class="bg-black">
+  <body class="bg-black light">
     <div class="preloader">
       <svg>
         <g>
@@ -91,7 +90,7 @@
       </div>
     </div>
 
-    <header id="header" class="light">
+    <header id="header">
       <div id="header-wrap">
         <nav id="navbar">
           <div class="main-logo">
@@ -108,36 +107,28 @@
       </div>
       <!--header-wrap-->
     </header>
+  <div id="billboard">
+    <div class="container">
+      <div class="row">
+        <div class="billboard-content d-flex mt-3 align-center mb-3">
+          <div class="light text-center">
+            <img src="images/Uplift Exp Logo (transparent background).png" alt="model" class="logo-img" />
+            <h1 class="section-title mb-4">
+              Hi, <strong>and welcome to Uplift Music</strong>
+            </h1>
 
-    <div id="billboard">
-      <div class="container">
-        <div class="row">
-          <div class="billboard-content d-flex mt-3 align-center mb-3">
-            <div class="light text-center">
-              <img
-                src="images/Uplift Exp Logo (transparent background).png"
-                alt="model"
-                class="logo-img"
-              />
-              <h1 class="section-title mb-4">
-                Hi, <strong>and welcome to Uplift Music</strong>
-              </h1>
+            <span class="designation typewrite" data-period="500"
+              data-type='[ "Music education", "Artistic expression", "Musical Journey" , "Piano Lessons", "Vocal Lessons"  ]'></span>
+            <p class="pt-3">
+              Uplift Music offers dynamic piano and vocal lessons for ages 4
+              and beyond, <br />providing an immersive, fun-filled experience
+              led by passionate mentors,<br />
+              fostering creativity and joy,<br />
+              and encouraging a lifelong musical journey encompassing various
+              aspects of music education.
+            </p>
 
-              <span
-                class="designation typewrite"
-                data-period="500"
-                data-type='[ "Music education", "Artistic expression", "Musical Journey" , "Piano Lessons", "Vocal Lessons"  ]'
-              ></span>
-              <p class="pt-3">
-                Uplift Music offers dynamic piano and vocal lessons for ages 4
-                and beyond, <br />providing an immersive, fun-filled experience
-                led by passionate mentors,<br />
-                fostering creativity and joy,<br />
-                and encouraging a lifelong musical journey encompassing various
-                aspects of music education.
-              </p>
-
-              <!-- <div class="button-container d-flex justify-content-center mt-5">
+            <!-- <div class="button-container d-flex justify-content-center mt-5">
                 <a
                   href="#"
                   class="btn btn-pill btn-large btn-outline-light mr-3"
@@ -152,32 +143,32 @@
                 ></a>
               </div>
               button-box-->
-              <a href="#about"><i class="arrow down"></i></a>
-            </div>
-            <!--text-content-->
-
-            <div class="social-links">
-              <ul class="list-unstyled d-flex">
-                <li class="mr-3">
-                  <a href="#"><i class="icon icon-facebook m-1"></i></a>
-                </li>
-                <li class="mr-3">
-                  <a href="#"><i class="icon icon-instagram m-1"></i></a>
-                </li>
-                <li class="mr-3">
-                  <a href="#"><i class="icon icon-behance m-1"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="icon icon-pinterest-p m-1"></i></a>
-                </li>
-              </ul>
-            </div>
-            <!--social-links-->
+            <a href="#about"><i class="arrow down"></i></a>
           </div>
+          <!--text-content-->
+
+          <div class="social-links">
+            <ul class="list-unstyled d-flex">
+              <li class="mr-3">
+                <a href="#"><i class="icon icon-facebook m-1"></i></a>
+              </li>
+              <li class="mr-3">
+                <a href="#"><i class="icon icon-instagram m-1"></i></a>
+              </li>
+              <li class="mr-3">
+                <a href="#"><i class="icon icon-behance m-1"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="icon icon-pinterest-p m-1"></i></a>
+              </li>
+            </ul>
+          </div>
+          <!--social-links-->
         </div>
       </div>
     </div>
-    <!--billboard
+  </div>
+  <!--billboard
 
 <section class="portfolio-wrap fancyboxeffect light padding-medium">
 
@@ -282,154 +273,117 @@
 
 </section>-->
 
-    <section class="about-us bg-grey light mt-4 mb-4">
-      <div class="container mb-4">
-        <div class="row mb-4">
-          <div class="border-top-right"></div>
-          <!--border-top-right-->
-          <div class="border-left-bottom"></div>
-          <!--border-left-bottom-->
-          <div class="section-header" id="about">
-            <h2 class="section-title mb-5 mt-4">About Uplift Music</h2>
-            <p>
-              Unlock the magic of music with Uplift Music! Our piano and vocal
-              lessons are designed for ages 4 and beyond, offering a dynamic and
-              fun-filled approach.<br />
-              Our expert instructors are not just teachers but passionate
-              mentors dedicated to your musical journey.<br />
-              Join us for an immersive experience transcending age, fostering
-              creativity and joy in every note.<br />
-              Whether you're a young prodigy or an adult embracing lifelong
-              learning, let the enchanting sounds of piano and the power of your
-              voice become the key to a lifetime of musical fulfillment.
-              <br /><br /><strong>Approach to Teaching</strong><br />
-              Experience a well-rounded musical journey with us— from the basics
-              of traditional music education to jamming, accompanying, singing,
-              reading lead sheets, composing, and more.<br />
-              Our curriculum is comprehensive and sometimes experiential,
-              fostering musicians who excel in every aspect of music.<br /><br />
-              Join us for a dynamic and diverse learning environment where
-              creativity knows no bounds.
-            </p>
-          </div>
-          <div class="pg-features">
-            <h3>Lesson Offered</h3>
-            <ul class="list-unstyled m-auto">
-              <li><i class="icon icon-star"></i><a>Piano</a></li>
-              <li>
-                <i class="icon icon-star"></i
-                ><a>Contemporary Commercial Vocals</a>
-              </li>
-              <li><i class="icon icon-star"></i><a>Classical Singing</a></li>
-            </ul>
-          </div>
-          <!--pg-features-->
+  <section class="about-us bg-grey light mt-4 mb-4 padding-large">
+    <div class="container mb-4">
+      <div class="row mb-4">
+        <div class="border-top-right"></div>
+        <!--border-top-right-->
+        <div class="border-left-bottom"></div>
+        <!--border-left-bottom-->
+        <div class="section-header" id="about">
+          <h2 class="section-title mb-5 mt-4">About Uplift Music</h2>
+          <p>
+            Unlock the magic of music with Uplift Music! Our piano and vocal
+            lessons are designed for ages 4 and beyond, offering a dynamic and
+            fun-filled approach.<br />
+            Our expert instructors are not just teachers but passionate
+            mentors dedicated to your musical journey.<br />
+            Join us for an immersive experience transcending age, fostering
+            creativity and joy in every note.<br />
+            Whether you're a young prodigy or an adult embracing lifelong
+            learning, let the enchanting sounds of piano and the power of your
+            voice become the key to a lifetime of musical fulfillment.
+            <br /><br /><strong>Approach to Teaching</strong><br />
+            Experience a well-rounded musical journey with us— from the basics
+            of traditional music education to jamming, accompanying, singing,
+            reading lead sheets, composing, and more.<br />
+            Our curriculum is comprehensive and sometimes experiential,
+            fostering musicians who excel in every aspect of music.<br /><br />
+            Join us for a dynamic and diverse learning environment where
+            creativity knows no bounds.
+          </p>
         </div>
-        <div class="pix_btn btn-click text-center mt-5 mb-4">
-          <a
-            href="#"
-            class="btn btn-pill btn-large btn-outline-light mr-3"
-            data-hover="click"
-            ><span>Register</span> <i class="icon icon-check"></i
-          ></a>
+        <div class="pg-features">
+          <h3>Lesson Offered</h3>
+          <ul class="list-unstyled m-auto">
+            <li><i class="icon icon-star"></i><a>Piano</a></li>
+            <li>
+              <i class="icon icon-star"></i><a>Contemporary Commercial Vocals</a>
+            </li>
+            <li><i class="icon icon-star"></i><a>Classical Singing</a></li>
+          </ul>
         </div>
+        <!--pg-features-->
       </div>
-    </section>
+      <div class="pix_btn btn-click text-center mt-5 mb-4">
+        <a href="#" class="btn btn-pill btn-large btn-outline-light mr-3" data-hover="click"><span>Register</span> <i
+            class="icon icon-check"></i></a>
+      </div>
+    </div>
+  </section>
 
-    <footer
-      id="footer"
-      class="bg-black light padding-xlarge"
-      style="
-        background-images: url(images/photography.jpg);
-        background-position: right;
-        background-repeat: no-repeat;
-      "
-    >
-      <div class="container">
-        <div class="row">
-          <div class="contact-information mt-4 d-flex">
-            <div class="contact-detail col-md-6">
-              <div class="detail mr-6 mb-4">
-                <ul class="list-unstyled colored-grey text-large">
-                  <li>
-                    17 Victoria Street, 4 The Marine, Van Ryneveld, Strand 7140
-                  </li>
-                  <li>
-                    Call
-                    <a href="tel:0626412255" class="colored">0626412255</a> /
-                    Whatsapp:
-                    <a href="https://wa.me/0626412255" class="colored"
-                      >0626412255</a
-                    >
-                  </li>
-                  <li>
-                    <a href="mailto:info@upliftmusic.co.za" class="colored"
-                      >info@upliftmusic.co.za</a
-                    >
-                  </li>
-                  <li>© 2024 UpliftMusic. All rights reserved.</li>
-                  <li>
-                    Maintained by :
-                    <a href="https://www.ft8.co.za" target="_blank"
-                      >Ft8.co.za</a
-                    >
-                  </li>
-                </ul>
-              </div>
-              <!--detail-->
+  <footer id="footer" class="bg-black light flexbox padding-xlarge">
+    <div class="container">
+      <div class="row">
+        <div class="contact-information mt-4 d-flex">
+          <div class=" col-lg-6 col-md-6">
+            <div class="detail mr-6 mb-4">
+              <ul class="list-unstyled colored-grey text-large">
+                <li>
+                  17 Victoria Street, 4 The Marine, Van Ryneveld, Strand 7140
+                </li>
+                <li>
+                  Call
+                  <a href="tel:0626412255" class="colored">0626412255</a> /
+                  Whatsapp:
+                  <a href="https://wa.me/0626412255" class="colored">0626412255</a>
+                </li>
+                <li>
+                  <a href="mailto:info@upliftmusic.co.za" class="colored">info@upliftmusic.co.za</a>
+                </li>
+                <li>© 2024 UpliftMusic. All rights reserved.</li>
+                <li>
+                  Maintained by :
+                  <a href="https://www.ft8.co.za" target="_blank">Ft8.co.za</a>
+                </li>
+              </ul>
             </div>
-            <!--contact-detail-->
+            <!--detail-->
+          </div>
+          <!--contact-detail-->
 
-            <div class="col-md-6 p-0">
-              <div class="container">
-                <div class="row">
-                  <h3>Quick Contact</h3>
-                  <form class="contact-form d-flex flex-wrap mt-4">
-                    <input
-                      type="text"
-                      name="name"
-                      placeholder="Name"
-                      class="name mb-3"
-                      required
-                    />
-                    <input
-                      type="text"
-                      name="E-mail/Phone Number"
-                      placeholder="E-mail/Phone Number"
-                      class="mb-3"
-                      required
-                    />
-                    <textarea
-                      placeholder="Message"
-                      style="height: 150px"
-                      required
-                    ></textarea>
+          <div class="col-lg-6 col-md-6 p-0">
+            <div class="container">
+              <div class="row">
+                <h3>Quick Contact</h3>
+                <form class="contact-form d-flex flex-wrap mt-4">
+                  <input type="text" name="name" placeholder="Name" class="name mb-3" required />
+                  <input type="text" name="E-mail/Phone Number" placeholder="E-mail/Phone Number" class="mb-3"
+                    required />
+                  <textarea placeholder="Message" style="height: 150px" required></textarea>
 
-                    <div class="pix_btn btn-click text-center mt-5">
-                      <button
-                        type="submit"
-                        href="#"
-                        class="btn btn-pill btn-large btn-outline-light mr-3"
-                        data-hover="click"
-                      >
-                        <span>Send Message</span>
-                        <i class="icon icon-paper-plane"></i>
-                      </button>
-                    </div>
-                  </form>
-                </div>
+                  <div class="pix_btn btn-click text-center mt-5">
+                    <button type="submit" href="#" class="btn btn-pill btn-large btn-outline-light mr-3"
+                      data-hover="click">
+                      <span>Send Message</span>
+                      <i class="icon icon-paper-plane"></i>
+                    </button>
+                  </div>
+                </form>
               </div>
             </div>
-            <!--col-md-6-->
           </div>
-          <!--contact-information-->
+          <!--col-md-6-->
         </div>
+        <!--contact-information-->
       </div>
-    </footer>
-    <script src="js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="js/plugins.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-  </body>
+    </div>
+  </footer>
+  <script src="js/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="js/plugins.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
+</body>
 
-  <!-- Mirrored from demo.templatesjungle.com/Uplift Music/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:13 GMT -->
+<!-- Mirrored from demo.templatesjungle.com/Uplift Music/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:13 GMT -->
+
 </html>
