made the site responisve

--- a/index.html
+++ b/index.html
@@ -1,112 +1,104 @@
 <!DOCTYPE html>
-<html>
-  <!-- Mirrored from demo.templatesjungle.com/Uplift Music/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:18 GMT -->
-  <head>
-    <meta
-      http-equiv="Cache-Control"
-      content="no-cache, no-store, must-revalidate"
-    />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
+<html lang="en">
+<!-- Mirrored from demo.templatesjungle.com/Uplift Music/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:18 GMT -->
 
-    <title>Uplift Music</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="description"
-      content="Unlock the magic of music with Uplift Music! Piano and vocal lessons designed for ages 4 and beyond, offering a dynamic and fun-filled approach. Our expert instructors are passionate mentors dedicated to your musical journey. Join us for an immersive experience transcending age, fostering creativity and joy in every note. Whether you're a young prodigy or an adult embracing lifelong learning, let the enchanting sounds of piano and the power of your voice become the key to a lifetime of musical fulfilment."
-    />
-    <meta
-      name="keywords"
-      content="Uplift Music, music lessons, piano lessons, vocal lessons, music education, Helderberg, Strand, lifelong learning, creative music education"
-    />
-    <meta name="author" content="Uplift Music" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="Uplift Music - Strand, Helderberg" />
-    <meta
-      property="og:description"
-      content="Unlock the magic of music with dynamic and fun-filled piano and vocal lessons. Expert instructors dedicated to your musical journey."
-    />
-    <meta property="og:image" content="https://www.upliftmusic.co.za/" />
-    <meta property="og:url" content="uhttps://www.upliftmusic.co.za/" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Uplift Music - Strand, Helderberg" />
-    <meta
-      name="twitter:description"
-      content="Unlock the magic of music with dynamic and fun-filled piano and vocal lessons. Expert instructors dedicated to your musical journey."
-    />
-    <meta name="twitter:image" content="https://www.upliftmusic.co.za/" />
-    <meta name="favicon" content="" />
+<head>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
 
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/vendor.css" />
-    <link rel="stylesheet" type="text/css" href="fonts/icomoon/icomoon.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-  </head>
-  <body class="bg-black light">
-    <div class="preloader">
-      <svg>
-        <g>
-          <path d="M 50,100 A 1,1 0 0 1 50,0" />
-        </g>
-        <g>
-          <path d="M 50,75 A 1,1 0 0 0 50,-25" />
-        </g>
-        <defs>
-          <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-            <stop offset="0%" style="stop-color: #ff56a1; stop-opacity: 1" />
-            <stop offset="100%" style="stop-color: #ff9350; stop-opacity: 1" />
-          </linearGradient>
-        </defs>
-      </svg>
+  <title>Uplift Music</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="description"
+    content="Unlock the magic of music with Uplift Music! Piano and vocal lessons designed for ages 4 and beyond, offering a dynamic and fun-filled approach. Our expert instructors are passionate mentors dedicated to your musical journey. Join us for an immersive experience transcending age, fostering creativity and joy in every note. Whether you're a young prodigy or an adult embracing lifelong learning, let the enchanting sounds of piano and the power of your voice become the key to a lifetime of musical fulfilment." />
+  <meta name="keywords"
+    content="Uplift Music, music lessons, piano lessons, vocal lessons, music education, Helderberg, Strand, lifelong learning, creative music education" />
+  <meta name="author" content="Uplift Music" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Uplift Music - Strand, Helderberg" />
+  <meta property="og:description"
+    content="Unlock the magic of music with dynamic and fun-filled piano and vocal lessons. Expert instructors dedicated to your musical journey." />
+  <meta property="og:image" content="https://www.upliftmusic.co.za/" />
+  <meta property="og:url" content="uhttps://www.upliftmusic.co.za/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Uplift Music - Strand, Helderberg" />
+  <meta name="twitter:description"
+    content="Unlock the magic of music with dynamic and fun-filled piano and vocal lessons. Expert instructors dedicated to your musical journey." />
+  <meta name="twitter:image" content="https://www.upliftmusic.co.za/" />
+  <meta name="favicon" content="" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="css/vendor.css" />
+  <link rel="stylesheet" type="text/css" href="fonts/icomoon/icomoon.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+
+<body class="bg-black light">
+  <div class="preloader">
+    <svg>
+      <g>
+        <path d="M 50,100 A 1,1 0 0 1 50,0" />
+      </g>
+      <g>
+        <path d="M 50,75 A 1,1 0 0 0 50,-25" />
+      </g>
+      <defs>
+        <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+          <stop offset="0%" style="stop-color: #ff56a1; stop-opacity: 1" />
+          <stop offset="100%" style="stop-color: #ff9350; stop-opacity: 1" />
+        </linearGradient>
+      </defs>
+    </svg>
+  </div>
+
+  <div class="nav nav-overlay">
+    <div class="nav__content">
+      <ul class="nav__list">
+        <li class="nav__list-item active-nav">
+          <a href="index.html" class="hover-target">Home</a>
+        </li>
+        <li class="nav__list-item">
+          <a href="about.html" class="hover-target">About </a>
+        </li>
+        <li class="nav__list-item">
+          <a href="register.html" class="hover-target">Register </a>
+        </li>
+        <li class="nav__list-item">
+          <a href="book.html" class="hover-target">Book </a>
+        </li>
+        <li class="nav__list-item">
+          <a href="pricing.html" class="hover-target">Pricing </a>
+        </li>
+        <li class="nav__list-item">
+          <a href="contact.html" class="hover-target">Contact </a>
+        </li>
+      </ul>
     </div>
+  </div>
 
-    <div class="nav nav-overlay">
-      <div class="nav__content">
-        <ul class="nav__list">
-          <li class="nav__list-item active-nav">
-            <a href="index.html" class="hover-target">Home</a>
-          </li>
-          <li class="nav__list-item">
-            <a href="about.html" class="hover-target">About </a>
-          </li>
-          <li class="nav__list-item">
-            <a href="register.html" class="hover-target">Register </a>
-          </li>
-          <li class="nav__list-item">
-            <a href="book.html" class="hover-target">Book </a>
-          </li>
-          <li class="nav__list-item">
-            <a href="pricing.html" class="hover-target">Pricing </a>
-          </li>
-          <li class="nav__list-item">
-            <a href="contact.html" class="hover-target">Contact </a>
-          </li>
-        </ul>
-      </div>
+  <header id="header">
+    <div id="header-wrap">
+      <nav id="navbar">
+        <div class="main-logo">
+          <a href="index.html">Uplift Music.</a>
+        </div>
+        <div class="action-menu">
+          <input id="menu-toggle" type="checkbox" />
+          <label class="menu-btn" for="menu-toggle">
+            <span></span>
+          </label>
+        </div>
+        <!--action-menu-->
+      </nav>
     </div>
-
-    <header id="header">
-      <div id="header-wrap">
-        <nav id="navbar">
-          <div class="main-logo">
-            <a href="index.html">Uplift Music.</a>
-          </div>
-          <div class="action-menu">
-            <input id="menu-toggle" type="checkbox" />
-            <label class="menu-btn" for="menu-toggle">
-              <span></span>
-            </label>
-          </div>
-          <!--action-menu-->
-        </nav>
-      </div>
-      <!--header-wrap-->
-    </header>
+    <!--header-wrap-->
+  </header>
   <div id="billboard">
     <div class="container">
       <div class="row">
@@ -119,7 +111,7 @@
 
             <span class="designation typewrite" data-period="500"
               data-type='[ "Music education", "Artistic expression", "Musical Journey" , "Piano Lessons", "Vocal Lessons"  ]'></span>
-            <p class="pt-3">
+            <p class="pt-3 padding-round">
               Uplift Music offers dynamic piano and vocal lessons for ages 4
               and beyond, <br />providing an immersive, fun-filled experience
               led by passionate mentors,<br />
@@ -282,7 +274,7 @@
         <!--border-left-bottom-->
         <div class="section-header" id="about">
           <h2 class="section-title mb-5 mt-4">About Uplift Music</h2>
-          <p>
+          <p class="padding-round">
             Unlock the magic of music with Uplift Music! Our piano and vocal
             lessons are designed for ages 4 and beyond, offering a dynamic and
             fun-filled approach.<br />
@@ -382,6 +374,15 @@
   <script src="js/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="js/plugins.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
 
 <!-- Mirrored from demo.templatesjungle.com/Uplift Music/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:13 GMT -->
