--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,8 @@
       </g>
       <defs>
         <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-          <stop offset="0%" style="stop-color: #ff56a1; stop-opacity: 1" />
-          <stop offset="100%" style="stop-color: #ff9350; stop-opacity: 1" />
+          <stop offset="0%" style="stop-color: var(--bs-1); stop-opacity: 1" />
+          <stop offset="100%" style="stop-color: var(--bs-3); stop-opacity: 1" />
         </linearGradient>
       </defs>
     </svg>
