--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
 </section>-->
 
   <section class="about-us bg-grey light mt-4 mb-4 padding-large">
-    <div class="container mb-4">
-      <div class="row mb-4">
+    <div class="container mb-4 bg-overlay">
+      <div class="row mb-4 p-10">
         <div class="border-top-right"></div>
         <!--border-top-right-->
         <div class="border-left-bottom"></div>
