--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
                 <li>© 2024 UpliftMusic. All rights reserved.</li>
                 <li>
                   Maintained by :
-                  <a href="https://www.ft8.co.za" target="_blank">Ft8.co.za</a>
+                  <a href="https://www.ft8.co.za" target="_blank" class="colored">Ft8.co.za</a>
                 </li>
               </ul>
             </div>
