--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             </div>
             <div class="col-lg-6 col-md-6">
               <div class="section-header" id="about">
-                <h2 class="section-title mb-5 mt-4 justify-content-center">
+                <h2 class="section-title">
                   About Uplift Music
                 </h2>
                 <p class="padding-round">
