--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
     <link rel="stylesheet" type="text/css" href="css/vendor.css" />
     <link rel="stylesheet" type="text/css" href="fonts/icomoon/icomoon.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,400;8..60,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Zeyada&display=swap" rel="stylesheet">
+
   </head>
 
   <body class="bg-black light">
@@ -320,9 +328,7 @@
             </div>
             <div class="col-lg-6 col-md-6">
               <div class="section-header" id="about">
-                <h2 class="section-title">
-                  About Uplift Music
-                </h2>
+                <h2 class="section-title">About Uplift Music</h2>
                 <p class="padding-round">
                   Unlock the magic of music with Uplift Music! Our piano and
                   vocal lessons are designed for ages 4 and beyond, offering a
@@ -351,7 +357,7 @@
         </div>
 
         <div class="col-lg-6 col-md-6">
-          <div class="pg-features" style="padding-left:10vw;">
+          <div class="pg-features" style="padding-left: 10vw">
             <h3>Lesson Offered</h3>
             <ul class="list-unstyled m-auto">
               <li><i class="icon icon-star"></i><a>Piano</a></li>
