addded mobile hidden class

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <img
                 src="images/Uplift Exp Logo (transparent background).png"
                 alt="model"
-                class="logo-img"
+                class="logo-img "
               />
               <h1 class="section-title mb-4">
                 Hi, <strong>and welcome to Uplift Music</strong>
@@ -325,9 +325,9 @@
         <!--border-top-right-->
         <div class="border-left-bottom"></div>
         <!--border-left-bottom-->
-        <div class="contact-information mt-4 d-flex">
+        <div class="contact-information mt-4 mb-3 d-flex">
           <div class="contact-information mt-4 d-flex">
-            <div class="col-lg-6 col-md-6">
+            <div class="col-lg-6 col-md-6 hidden-mobile">
               <img src="images/pexels-pavel-danilyuk-7521316.jpg" />
             </div>
             <div class="col-lg-6 col-md-6">
