--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
       id="billboard"
       style="
         background-image: url(images/blue-brick-wall-background.jpg);
-        width: 100%;
-  height: auto;
+        width: auto;
+  height: 100%;
         background-position: center;
         background-repeat: no-repeat;
         background-size: 120vw;
