made brick responvie

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <header id="header">
       <div id="header-wrap">
-        <nav id="navbar" class=" fixed-top bg-dark">
+        <nav id="navbar" class="fixed-top bg-dark">
           <div class="main-logo">
             <a href="index.html">Uplift Music.</a>
           </div>
@@ -133,17 +133,7 @@
       </div>
       <!--header-wrap-->
     </header>
-    <div
-      id="billboard"
-      style="
-        background-image: url(images/blue-brick-wall-background.jpg);
-        width: auto;
-  height: 100%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 120vw;
-      "
-    >
+    <div class="mobile-fluid billboard" id="billboard">
       <div class="container">
         <div class="row">
           <div class="billboard-content d-flex mt-3 align-center mb-3">
@@ -151,7 +141,7 @@
               <img
                 src="images/Uplift Exp Logo (transparent background).png"
                 alt="model"
-                class="logo-img "
+                class="logo-img"
               />
               <h1 class="section-title mb-4">
                 Hi, <strong>and welcome to Uplift Music</strong>
@@ -490,22 +480,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script>
-      window.onscroll = function () {
-        mvyFunction();
-      };
-
-      var navbar = document.getElementById("navbar");
-      var sticky = navbar.offsetTop;
-
-      function myFunction() {
-        if (window.pageYOffset >= sticky) {
-          navbar.classList.add("sticky");
-        } else {
-          navbar.classList.remove("sticky");
-        }
-      }
-    </script>
+    <script></script>
   </body>
 
   <!-- Mirrored from demo.templatesjungle.com/Uplift Music/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 Jan 2024 13:30:13 GMT -->
